--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,40 @@
     color: rgb(98, 98, 98);
     font-size: 15px;
 }
+
+/* Search-bar */
+.search-bar{
+    display: flex;
+    height: 40px;
+    width: 100%;
+    background-color: rgb(250, 250, 250);
+}
+
+.search-bar button{
+    border: none;
+    border: 5px solid #f9f9f9;
+    border-right: 1px solid lightgray;
+    width: 20%;
+}
+
+.search-icon-container{
+    padding: 5px 8px;
+    width: 10%;
+    cursor: pointer;
+    background-color: rgb(250, 250, 250);
+}
+
+.search{
+    height: 40px;
+    width: 100%;
+    background-color: rgb(250, 250, 250);
+}
+
+.search input{
+    padding: 5px 8px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    border: 5px solid #f9f9f9;
+    border-left: none;
+}
