--- a/css/style.css
+++ b/css/style.css
@@ -172,3 +172,46 @@
   justify-content: space-between;
   border-left: 1px solid #b1b1b1;
 }
+
+.chat{
+    height: calc(95vh - 110px);
+    background-image: url('../img/mine.jpg');
+    overflow-y: scroll;
+    padding: 50px 100px;
+}
+
+
+/* SEND BAR */
+.send-bar{
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #f3eeea;
+}
+
+.face{
+    width: calc(100%/10);
+}
+
+.send-mex{
+    width: calc(100%/10 *8);
+}
+
+.send-mex input{
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    padding-left: 10px;
+    font-weight: 500;
+}
+
+.vocal-audio{
+    width: calc(100%/10);
+}
+
+.face i, .vocal-audio i{
+    font-size: 20px;
+    color: rgb(107, 115, 118);
+}
