--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@
     min-height: 50px;
     background-color: white;
     border-radius: 5px;
+    margin-bottom: 6px;
     padding: 5px 8px 5px 12px;
     display: flex;
     flex-direction: column;
