--- a/css/style.css
+++ b/css/style.css
@@ -174,65 +174,66 @@
   border-left: 1px solid #b1b1b1;
 }
 
-.chat{
-    height: calc(95vh - 110px);
-    background-image: url('../img/mine.jpg');
-    overflow-y: scroll;
-    padding: 50px 100px;
+.chat {
+  height: calc(95vh - 110px);
+  background-image: url("../img/mine.jpg");
+  overflow-y: scroll;
+  padding: 50px 100px;
 }
 
-.message-container{
-    width: 100%;
-    margin-bottom: 15px;
+.message-container {
+  width: 100%;
+  margin-bottom: 15px;
 }
 
-.message{
-    width: 250px;
-    min-height: 50px;
-    background-color: white;
-    border-radius: 5px;
-    margin-bottom: 6px;
-    padding: 5px 8px 5px 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.message {
+  width: 250px;
+  min-height: 50px;
+  background-color: white;
+  border-radius: 5px;
+  margin-bottom: 6px;
+  padding: 5px 8px 5px 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.send{
-    background-color: #d5f9ba;
-    margin-left: auto;
+.send {
+  background-color: #d5f9ba;
+  margin-left: auto;
 }
 /* SEND BAR */
-.send-bar{
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #f3eeea;
+.send-bar {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #f3eeea;
 }
 
-.face{
-    width: calc(100%/10);
+.face {
+  width: calc(100% / 10);
 }
 
-.send-mex{
-    width: calc(100%/10 *8);
+.send-mex {
+  width: calc(100% / 10 * 8);
 }
 
-.send-mex input{
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
-    font-weight: 500;
+.send-mex input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  padding-left: 10px;
+  font-weight: 500;
 }
 
-.vocal-audio{
-    width: calc(100%/10);
+.vocal-audio {
+  width: calc(100% / 10);
 }
 
-.face i, .vocal-audio i{
-    font-size: 20px;
-    color: rgb(107, 115, 118);
+.face i,
+.vocal-audio i {
+  font-size: 20px;
+  color: rgb(107, 115, 118);
 }
